--- a/roles/tripwire/tasks/check.yml
+++ b/roles/tripwire/tasks/check.yml
@@ -2,9 +2,10 @@
 #
 #
 ---
-- name: TRIPWIRE OVERLAY | checking file integrity
-  command: '/sbin/tripwire --check'
+- name: TRIPWIRE OVERLAY | checking file integrity (anisble errors can be safely ignored)
+  command: 'tripwire --check -L /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key'
   become: yes
   register: report
+  ignore_errors: yes
   
 - debug: msg="{{ report.stdout_lines }}"  
