--- a/roles/tripwire/tasks/main.yml
+++ b/roles/tripwire/tasks/main.yml
@@ -4,22 +4,64 @@
 ---
 - block:
   
-  # CentOS / Redhat 7
-  - name: TRIPWIRE OVERLAY | installing tripwire packages
-    package:
-      name: "{{ item }}"
-      state: present
-    with_items:
-      - epel-release-7-11
-      - tripwire
-    when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
+  - block:
+    
+    # this is unnecessary on RHEL 6
+    - name: TRIPWIRE OVERLAY | installing epel package
+      package:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - "epel-release-{{ packages.epel_version }}"
+      when: ansible_distribution == 'CentOS'
+    
+    # okay to ignore errors here, just means that tripwire isn't present
+    - name: TRIPWIRE OVERLAY | locating tripwire binary
+      raw: 'which tripwire'
+      register: tripwire_binary
+      ignore_errors: yes
+        
+    - name: TRIPWIRE OVERLAY | checking for {{ tripwire_binary.stdout }}
+      stat: path={{ tripwire_binary.stdout | trim }}
+      register: existing_package
+
+    - block:
+      
+      - name: TRIPWIRE OVERLAY | fetching tripwire v{{ packages.tripwire_version }}
+        get_url:
+          url: "https://rpmfind.net/linux/epel/6/x86_64/Packages/t/tripwire-{{ packages.tripwire_version }}.el6.x86_64.rpm"
+          dest: "/tmp/tripwire-{{ packages.tripwire_version }}.el6.x86_64.rpm"
+          mode: 0640
   
+      - name: TRIPWIRE OVERLAY | installing tripwire packages
+        package:
+          name: "{{ item }}"
+          state: present
+        with_items:
+          - /tmp/tripwire-{{ packages.tripwire_version }}.el6.x86_64.rpm            
+      
+      when:
+        - not existing_package.stat.exists
+        - ansible_distribution_version is version_compare('7', '<')
+    
+    # CentOS / Redhat 7
+    - name: TRIPWIRE OVERLAY | installing tripwire packages
+      package:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - tripwire
+      when: ansible_distribution_version is version_compare('7', '>=')
+  
+    when:
+      - ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
+
   - name: TRIPWIRE OVERLAY | checking /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key
     stat: path="/etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key"
     register: existing_key
     
   - name: TRIPWIRE OVERLAY | generating local key (this may take some time)
-    command: "/sbin/twadmin --generate-keys -L /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key -P {{ local_passphrase | default(tripwire.config.local_passphrase) }}"
+    command: "twadmin --generate-keys -L /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key -P {{ local_passphrase | default(tripwire.config.local_passphrase) }}"
     when: not existing_key.stat.exists
   
   - name: TRIPWIRE OVERLAY | checking /etc/tripwire/site.key
@@ -27,7 +69,7 @@
     register: existing_key
     
   - name: TRIPWIRE OVERLAY | generating site key (this make take some time)
-    command: "/sbin/twadmin --generate-keys -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }}"
+    command: "twadmin --generate-keys -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }}"
     when: not existing_key.stat.exists
   
   - name: TRIPWIRE OVERLAY | hacking configuration to enable automation
@@ -43,9 +85,9 @@
       line: "SYSLOGREPORTING        ={{ tripwire.config.syslog }}"
       
   - name: TRIPWIRE OVERLAY | creating and signing configuration file
-    command: "/sbin/twadmin --create-cfgfile -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }} /etc/tripwire/twcfg.txt"
+    command: "twadmin --create-cfgfile -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }} /etc/tripwire/twcfg.txt"
 
-  - name: TRIPWIRE | installing tripwire policy into /etc/tripwire
+  - name: TRIPWIRE OVERLAY | installing tripwire policy into /etc/tripwire
     template:
       src: twpol.j2
       dest: /etc/tripwire/twpol.txt
@@ -70,10 +112,10 @@
       marker: "# datanexus {mark} ANSIBLE MANAGED BLOCK"
 
   - name: TRIPWIRE OVERLAY | creating and signing policy file
-    command: "/sbin/twadmin --create-polfile -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }} /etc/tripwire/twpol.txt" 
+    command: "twadmin --create-polfile -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }} /etc/tripwire/twpol.txt" 
   
   - name: TRIPWIRE OVERLAY | creating initial database (this may take some time)
-    command: "/sbin/tripwire --init -P {{ local_passphrase | default(tripwire.config.local_passphrase) }}"
+    command: "tripwire --init -L /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key -P {{ local_passphrase | default(tripwire.config.local_passphrase) }}"
     
   # - name: TRIPWIRE OVERLAY | checking file integrity (this may take some time)
  #    command: '/sbin/tripwire --check'
