--- a/roles/tripwire/tasks/main.yml
+++ b/roles/tripwire/tasks/main.yml
@@ -6,17 +6,22 @@
   
   - block:
     
-    # this is unnecessary on RHEL 6
     - name: TRIPWIRE OVERLAY | installing epel package
       package:
         name: "{{ item }}"
         state: present
       with_items:
         - "epel-release-{{ packages.epel_version }}"
-      when: ansible_distribution == 'CentOS'
+      when: ansible_distribution == 'CentOS' and ansible_distribution_version is version_compare('7', '>=')
     
+    - name: TRIPWIRE OVERLAY ({{ ansible_distribution }}) | installing epel package
+      yum:
+        name: ['https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm']
+        state: present
+      when: ansible_distribution == 'RedHat' and ansible_distribution_version is version_compare('7', '>=')
+      
     # okay to ignore errors here, just means that tripwire isn't present
-    - name: TRIPWIRE OVERLAY | locating tripwire binary
+    - name: TRIPWIRE OVERLAY | locating tripwire binary (fatal errors are acceptable)
       raw: 'which tripwire'
       register: tripwire_binary
       ignore_errors: yes
@@ -45,17 +50,15 @@
         - ansible_distribution_version is version_compare('7', '<')
     
     # CentOS / Redhat 7
-    - name: TRIPWIRE OVERLAY | installing tripwire packages
+    - name: TRIPWIRE OVERLAY ({{ ansible_distribution }}) | installing tripwire packages
       package:
-        name: "{{ item }}"
+        name: ["tripwire-{{ packages.tripwire_version }}.el7"]
         state: present
-      with_items:
-        - tripwire
       when: ansible_distribution_version is version_compare('7', '>=')
   
     when:
       - ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
-
+  
   - name: TRIPWIRE OVERLAY | checking /etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key
     stat: path="/etc/tripwire/{{ hostvars[inventory_hostname].ansible_hostname }}-local.key"
     register: existing_key
@@ -106,10 +109,10 @@
           severity = $(SIG_HI)
         )
         {
-          {{ rules | default() }}
-          {{ tripwire.rules }}
+          {{ default_rules | default() }}
+          {{ host_rules }}
         }
-      marker: "# datanexus {mark} ANSIBLE MANAGED BLOCK"
+      marker: "# {{ tenant }} {mark} ANSIBLE MANAGED BLOCK"
 
   - name: TRIPWIRE OVERLAY | creating and signing policy file
     command: "twadmin --create-polfile -S /etc/tripwire/site.key -Q {{ site_passphrase | default(tripwire.config.site_passphrase) }} /etc/tripwire/twpol.txt" 
